@@ -221,3 +221,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040525 szx.c: Timex Dock/Exrom pages aren't 0x4000 bytes long.
 20040526 accessor.pl,internals.h,snapshot.c,szx.c: tidy up snapshot
 	 alloc/free routines.
+20040527 timings.c: small timing tweak for 128K machines; we now match
+	 the timines for (at least some!) 48K/128K machines.
